invoices updated for stackOverflow issue

--- a/src/components/pages/invoices/manageable/manageable.scss
+++ b/src/components/pages/invoices/manageable/manageable.scss
@@ -109,10 +109,9 @@
   .invoice {
     margin: 0 10px;
     background-color: white;
-    border-radius: 5px;
     box-shadow: 0 5px 12px rgba(0, 0, 0, 0.3),
-                inset 2px 2px 8px rgba(0, 0, 0, 0.2),
-                inset -2px -2px 8px rgba(0, 0, 0, 0.2);
+                inset 2px 0 2px rgba(0, 0, 0, 0.2),
+                inset -2px 0 2px rgba(0, 0, 0, 0.2);
 
     .item-list {
       overflow: hidden;
@@ -122,6 +121,11 @@
       .items {
         user-select: none;
         width: 50%;
+
+        &.full-width {
+          float: left;
+          width: 100%;
+        }
 
         &.left {
           float: left;
@@ -136,8 +140,60 @@
         }
 
         hr {
-          margin: 25px 0;
-          border-top: 1px solid #ccc;
+          margin: 5px 50px;
+          border-top: 1px solid #888;
+
+          &.left {
+            margin: 25px 50px;
+            border-top: 1px solid #ccc;
+            width: calc(200% - 100px);
+          }
+        }
+
+        table {
+          width: calc(100% - 110px);
+          margin: 0 50px;
+
+          th, td {
+            font-size: 13px;
+            text-align: right;
+            padding: 0;
+
+            &.left {
+              text-align: left;
+            }
+          }
+
+          textarea {
+            font-family: Roboto;
+            font-size: 16px;
+            box-sizing: border-box;
+            resize: none;
+            background-color: white;
+            border: 0;
+            border-bottom: 1px solid transparent;
+            box-shadow: 0 0 2px #aaa;
+            padding: 5px;
+            width: 100%;
+            height: 62px;
+
+            &::placeholder {
+              font-family: Roboto;
+              font-size: 16px;
+              color: #ccc;
+            }
+
+            &:focus {
+              border-color: transparent;
+              border-bottom: 1px solid deepskyblue;
+              box-shadow: 0 0 3px #888;
+              transition: 0s;
+
+              &::placeholder {
+                color: #aaa;
+              }
+            }
+          }
         }
 
         .item {
@@ -153,12 +209,12 @@
             word-spacing: 2px;
             font-weight: bold;
             box-shadow: 0 0 2px #aaa;
-            border-top: 1px solid transparent;
+            border-bottom: 1px solid transparent;
             transition: 0s;
 
             &:focus {
               border-color: transparent;
-              border-top: 1px solid deepskyblue;
+              border-bottom: 1px solid deepskyblue;
               box-shadow: 0 0 3px #111;
               transition: 0s;
             }
@@ -178,10 +234,15 @@
             width: 120px;
           }
 
+          input[type=number]::-webkit-outer-spin-button, input[type=number]::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+          }
+
           input {
             box-sizing: border-box;
             background-color: white;
-            border-top: 1px solid transparent;
+            border-bottom: 1px solid transparent;
             box-shadow: 0 0 2px #aaa;
             padding: 5px;
             width: 250px;
@@ -189,22 +250,42 @@
             text-align: left;
             transition: 0s;
 
+            &[type=date], &[type=number], &[type=email], &[type=tel] {
+              font-family: Roboto;
+              font-size: 16px;
+              margin: 0;
+              border-radius: 5px;
+              border: 0;
+              border-bottom: 1px solid transparent;
+            }
+
+            &.full-width {
+              width: calc(100% - 10px);
+              margin: 0;
+              margin-left: 10px;
+              text-align: right;
+
+              &.left {
+                width: 100%;
+                margin: 0;
+                margin-left: 0;
+                text-align: left;
+              }
+            }
+
             &::placeholder {
               color: #ccc;
             }
 
-            &[type=date], &[type=number], &[type=email], &[type=tel] {
-              margin: 0;
-              border-radius: 5px;
-              border: 0;
-              border-top: 1px solid transparent;
-            }
-
             &:focus {
               border-color: transparent;
-              border-top: 1px solid deepskyblue;
+              border-bottom: 1px solid deepskyblue;
               box-shadow: 0 0 3px #888;
               transition: 0s;
+
+              &::placeholder {
+                color: #aaa;
+              }
             }
           }
 
@@ -215,14 +296,14 @@
               cursor: help;
               display: none;
               position: absolute;
-              line-height: 26px;
+              line-height: 30px;
               color: white;
               box-shadow: inset 0 0 5px white;
               background-color: rgba(red, .8);
               border-radius: 0 5px 5px 0;
               margin-left: -64px;
               width: 20px;
-              height: 26px;
+              height: 30px;
               transition: .2s;
 
               &.show {
